- Initial version of view for schedule filters
- Minor naming fixes
- StaticDataContext now no longer tracks changes in its items

--- a/MainLib/View/EditPersonDataUserControl.xaml
+++ b/MainLib/View/EditPersonDataUserControl.xaml
@@ -4,25 +4,22 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mainLib="clr-namespace:MainLib"
-    xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
     xmlns:mvvm="clr-namespace:MvvmEventBinding;assembly=MvvmEventBinding"
     mc:Ignorable="d"
     x:Class="MainLib.EditPersonDataUserControl"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
+    xmlns:core="clr-namespace:Core;assembly=StuffLib"
     Height="auto" Width="600" Background="White"
     d:DataContext="{d:DesignInstance mainLib:EditPersonDataViewModel}">
-
     <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        <stuffLib:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Hidden}">
-            <stuffLib:ConverterItem To="{x:Static Visibility.Visible}">
-                <stuffLib:ConverterItem.From>
+        <core:UniversalConverter x:Key="booleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Hidden}">
+            <core:ConverterItem To="{x:Static Visibility.Visible}">
+                <core:ConverterItem.From>
                     <system:Boolean>True</system:Boolean>
-                </stuffLib:ConverterItem.From>
-            </stuffLib:ConverterItem>
-        </stuffLib:UniversalConverter>
+                </core:ConverterItem.From>
+            </core:ConverterItem>
+        </core:UniversalConverter>
     </UserControl.Resources>
-
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -71,13 +68,13 @@
         <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Height="16" Margin="0,2">Отчество</TextBlock>
         <TextBox Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch"  Text="{Binding MiddleName, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Height="16" Margin="0,5" Visibility="{Binding IsFIOChanged, Converter={StaticResource BooleanToInversedVisibilityConverter}}">Причина смены ФИО</TextBlock>
+        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Height="16" Margin="0,5" Visibility="{Binding IsFIOChanged, Converter={StaticResource booleanToInversedVisibilityConverter}}">Причина смены ФИО</TextBlock>
         <ComboBox Grid.Row="4" Grid.Column="2" Margin="1" HorizontalAlignment="Stretch" ItemsSource="{Binding ChangeNameReasons}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedChangeNameReason}"
-                  Visibility="{Binding IsFIOChanged, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                  Visibility="{Binding IsFIOChanged, Converter={StaticResource booleanToInversedVisibilityConverter}}"/>
         <TextBlock Grid.Row="4" Grid.Column="3" Margin="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="Дата"  
-                   Visibility="{Binding IsSelectedChangeNameReasonWithCreateNewPersonNames, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                   Visibility="{Binding IsSelectedChangeNameReasonWithCreateNewPersonNames, Converter={StaticResource booleanToInversedVisibilityConverter}}"/>
         <DatePicker Grid.Row="4" Grid.Column="4" Margin="1" HorizontalAlignment="Stretch" SelectedDate="{Binding ChangeNameDate}"
-                    Visibility="{Binding IsSelectedChangeNameReasonWithCreateNewPersonNames, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+                    Visibility="{Binding IsSelectedChangeNameReasonWithCreateNewPersonNames, Converter={StaticResource booleanToInversedVisibilityConverter}}"/>
 
         <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Height="16" Margin="0,5">Дата рождения</TextBlock>
         <DatePicker Grid.Row="5" Grid.Column="2" Margin="1" HorizontalAlignment="Stretch" SelectedDate="{Binding BirthDate}" BorderThickness="1"/>
