--- a/Registry/View/PersonView.xaml
+++ b/Registry/View/PersonView.xaml
@@ -1,18 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry"
-                    xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:core="clr-namespace:Core;assembly=StuffLib">
     <DataTemplate DataType="{x:Type registry:PersonViewModel}">
         <DataTemplate.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-            <stuffLib:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Collapsed}">
-                <stuffLib:ConverterItem To="{x:Static Visibility.Visible}">
-                    <stuffLib:ConverterItem.From>
+            <core:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Collapsed}">
+                <core:ConverterItem To="{x:Static Visibility.Visible}">
+                    <core:ConverterItem.From>
                         <system:Boolean>False</system:Boolean>
-                    </stuffLib:ConverterItem.From>
-                </stuffLib:ConverterItem>
-            </stuffLib:UniversalConverter>
+                    </core:ConverterItem.From>
+                </core:ConverterItem>
+            </core:UniversalConverter>
         </DataTemplate.Resources>
         <Grid HorizontalAlignment="Stretch" MinWidth="320" MinHeight="54" VerticalAlignment="Stretch">
             <Grid.RowDefinitions>
