--- a/Registry/View/ScheduledAssignmentView.xaml
+++ b/Registry/View/ScheduledAssignmentView.xaml
@@ -1,28 +1,28 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:registry="clr-namespace:Registry">
+                    xmlns:registry="clr-namespace:Registry"
+                    xmlns:core="clr-namespace:Core;assembly=StuffLib">
     <DataTemplate DataType="{x:Type registry:ScheduledAssignmentViewModel}">
         <DataTemplate.Resources>
-            <stuffLib:UniversalConverter x:Key="isCompletedToBackgroundConverter">
-                <stuffLib:ConverterItem>
-                    <stuffLib:ConverterItem.From>
+            <core:UniversalConverter x:Key="isCompletedToBackgroundConverter">
+                <core:ConverterItem>
+                    <core:ConverterItem.From>
                         <system:Boolean>True</system:Boolean>
-                    </stuffLib:ConverterItem.From>
-                    <stuffLib:ConverterItem.To>
+                    </core:ConverterItem.From>
+                    <core:ConverterItem.To>
                         <SolidColorBrush Color="LightGreen" />
-                    </stuffLib:ConverterItem.To>
-                </stuffLib:ConverterItem>
-                <stuffLib:ConverterItem>
-                    <stuffLib:ConverterItem.From>
+                    </core:ConverterItem.To>
+                </core:ConverterItem>
+                <core:ConverterItem>
+                    <core:ConverterItem.From>
                         <system:Boolean>False</system:Boolean>
-                    </stuffLib:ConverterItem.From>
-                    <stuffLib:ConverterItem.To>
+                    </core:ConverterItem.From>
+                    <core:ConverterItem.To>
                         <SolidColorBrush Color="Khaki" />
-                    </stuffLib:ConverterItem.To>
-                </stuffLib:ConverterItem>
-            </stuffLib:UniversalConverter>
+                    </core:ConverterItem.To>
+                </core:ConverterItem>
+            </core:UniversalConverter>
         </DataTemplate.Resources>
         <Border BorderBrush="Gray" BorderThickness="0 0.5 0 0.5" Background="{Binding IsComplete, Converter={StaticResource isCompletedToBackgroundConverter}}">
             <Grid>
